--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "jest"
+    "compile": "npx tsc",
+    "test": "npm run compile && jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "jest": {
+        "testPathIgnorePatterns": ["src"]
+  },
   "dependencies": {
     "geckodriver": "^2.0.0",
     "selenium-webdriver": "^4.0.0-beta.4"
   },
   "devDependencies": {
-    "jest": "^27.0.5"
+    "@types/node": "^15.12.4",
+    "@types/selenium-webdriver": "^4.0.14",
+    "jest": "^27.0.5",
+    "nodemon": "^2.0.7",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4"
   }
 }
